deploy/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  selector:
    app: todo-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
